--- a/payloadConvertor/src/main/resources/application.properties
+++ b/payloadConvertor/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=payload-Convertor
 server.port=8083
 logging.level.org.springframework=DEBUG
+spring.security.user.name=pepsi
+spring.security.user.password=pepsi
 tranferEndpoint=http://localHost:8082/payloadReceiver
