--- a/payloadReceiver/src/main/resources/application.properties
+++ b/payloadReceiver/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=payload-receiver
 server.port=8082
-
 logging.level.org.springframework=DEBUG
+spring.security.user.name=pepsi
+spring.security.user.password=pepsi
+#security.basic.realm=payload-Receiver
