--- a/payloadReceiver/pom.xml
+++ b/payloadReceiver/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.0.M5</version>
+		<version>2.1.8.RELEASE</version>
 	</parent>
-	<groupId>com.cts.tib</groupId>
+
+	<groupId>com.cts.onenetwork</groupId>
 	<artifactId>payloadReceiver</artifactId>
 	<version>1.0</version>
 	<name>payloadReceiver</name>
-	<description>payload receiving end</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -33,10 +33,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	    <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -47,20 +43,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-		</pluginRepository>
-	</pluginRepositories>
-
 </project>
