--- a/ConnectorService/src/main/resources/application.properties
+++ b/ConnectorService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=payload-receiver
+spring.application.name=ConnectorService
 server.port=8082
 logging.level.org.springframework=DEBUG
 spring.security.user.name=pepsi
