--- a/ConnectorService/.gitignore
+++ b/ConnectorService/.gitignore
@@ -1,9 +1,7 @@
-HELP.md
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
-
+.metadata
 ### STS ###
 .apt_generated
 .classpath
@@ -11,21 +9,25 @@ target/
 .project
 .settings
 .springBeans
-.sts4-cache
-
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+.vscode
+*.log
+.apt_generated
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
-
 ### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+nbproject/private/
 build/
-
-### VS Code ###
-.vscode/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+.vscode
+*.log
+/bin/
